fixed search bar bug, icon too small

--- a/src/pages/service/searchBar.scss
+++ b/src/pages/service/searchBar.scss
@@ -153,7 +153,7 @@
 					border-radius: 5px;
 					border-width: thin;
 					width: 70%;
-					height: 25px;
+					height: 35px;
 					font-size: 12px;	
 					background-color: white;
 				}
@@ -161,8 +161,8 @@
 				button{
 					border-radius: 5px;
 					border-width: thin;
-					height: 25px;
-					width: 25px;
+					height: 35px;
+					width: 35px;
 					background-color: #0bb8e3;
 
 					img{
@@ -230,7 +230,7 @@
 					border-radius: 5px;
 					border-width: thin;
 					width: 70%;
-					height: 20px;
+					height: 30px;
 					font-size: 12px;	
 					background-color: white;
 				}
@@ -238,8 +238,8 @@
 				button{
 					border-radius: 5px;
 					border-width: thin;
-					height: 20px;
-					width: 20px;
+					height: 30px;
+					width: 30px;
 					background-color: #0bb8e3;
 
 					img{
